--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -756,6 +756,11 @@ nav .nav-mobile {
                 }
             }
 */
+body.ibis-translating {
+  visibility: hidden;
+  opacity: 0;
+}
+
 .homepage .center {
   text-align: center;
 }
@@ -790,6 +795,7 @@ nav .nav-mobile {
   font-family: "NeueHaasDisplayMedium";
   color: #F2EDDF;
   -webkit-text-stroke: 2px #111321;
+  margin: 0 12px;
 }
 .homepage .hero-graphic {
   display: block;
@@ -2011,9 +2017,16 @@ nav .nav-mobile {
 .blog-list-page .blog-hero .title .title-1 {
   text-align: center;
 }
+@media (max-width: 838px) {
+  .blog-list-page .blog-hero {
+    max-width: 100%;
+  }
+  .blog-list-page .blog-hero .title {
+    max-width: 90%;
+  }
+}
 .blog-list-page .blog-featured {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 42px;
   padding-top: 0;
@@ -2027,14 +2040,19 @@ nav .nav-mobile {
 .blog-list-page .blog-featured .right {
   max-width: 49%;
 }
-.blog-list-page .blog-featured .right .wrapper {
-  max-width: 58%;
-}
 .blog-list-page .blog-featured .right .wrapper .title {
   margin-bottom: 40px;
 }
 .blog-list-page .blog-featured .right .wrapper .title h5 {
   margin-bottom: 40px;
+}
+@media (max-width: 838px) {
+  .blog-list-page .blog-featured {
+    flex-direction: column;
+  }
+  .blog-list-page .blog-featured .right {
+    max-width: 100%;
+  }
 }
 .blog-list-page .blog-grid {
   padding-top: 0;
@@ -2102,8 +2120,4 @@ nav .nav-mobile {
   background: var(--grey-900);
   color: white;
   border-radius: 100px;
-}
-.blog-page .blog-card {
-  width: 100%;
-  max-width: 456px;
 }
