changed component render to WebAssemblyPrerendered in _Host.csthml, add IbisContentProvider Service as dependency in SparcFeatures.Startup

--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(SparcWeb.Pages.Index)" render-mode="Static" />
+        <component type="typeof(SparcWeb.Pages.Index)" render-mode="WebAssemblyPrerendered" />
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
