--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -212,6 +212,8 @@
     public string IbisText = $"Ibis uses Machine Learning to automatically transcribe your audio and video files";
     public string LawofText = $"Law of 100 is a day tracking system that will help to keep you on the right path while motivating you to reach your goals.";
     
+    @inject SparcWeb.IbisContentProvider Ibis
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
