--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -7,14 +7,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ibis</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"  />
+    <title>Sparc</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
+    @*<link href="/Pages/_Host.css" rel="stylesheet" />*@
+    @*<link href="SparcWeb.styles.css" rel="stylesheet" />*@
 </head>
 <body>
     <app>
+        <component type="typeof(SparcWeb.Shared.NavMenu)" render-mode="WebAssemblyPrerendered" />
         <component type="typeof(SparcWeb.Pages.Index)" render-mode="WebAssemblyPrerendered" />
     </app>
 
