add KodeKit stylesheet; fix css for landing page

--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -1,7 +1,5 @@
 ﻿@page "/"
-@namespace  SparcFeatures.Pages
 @using SparcWeb
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
 <html>
@@ -11,7 +9,7 @@
     <title>Sparc</title>
     <base href="~/" />
     <link href="css/app.css" rel="stylesheet" />
-    @*<link href="/Pages/_Host.css" rel="stylesheet" />*@
+    <link rel="stylesheet" type="text/css" href="https://api.kodekit.io/greffe-winterweight.css">
     @*<link href="SparcWeb.styles.css" rel="stylesheet" />*@
 </head>
 <body>
