--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -9,11 +9,22 @@
                 <p class="subtitle-1">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
             </div>
             <div class="cta-box">
+                <div class="profile-pics-wrapper mobile">
+                    <div class="profile-pic">
+                        <img src="images/Picture.png" />
+                    </div>
+                    <div class="profile-pic">
+                        <img src="images/Picture.png" />
+                    </div>
+                    <div class="profile-pic">
+                        <img src="images/Picture.png" />
+                    </div>
+                </div>
                 <div class="box-header">
                     <p class="subtitle-small">Join the Sparc community, and get access to a list of resources & guidance.</p>
                 </div>
                 <div class="cta-flex">
-@*                    <div class="profile-pics-wrapper">
+                    <div class="profile-pics-wrapper desktop">
                         <div class="profile-pic">
                             <img src="images/Picture.png" />
                         </div>
@@ -23,8 +34,9 @@
                         <div class="profile-pic">
                             <img src="images/Picture.png" />
                         </div>
-                    </div>*@
+                    </div>
                     <div>
+                        <input class="cta-email" placeholder="Your Email"/>
                         <button>Join the community</button>
                     </div>
                 </div>
