--- a/SparcWeb/Shared/NavMenu.razor
+++ b/SparcWeb/Shared/NavMenu.razor
@@ -38,10 +38,10 @@
             <li class="nav-link">
                 <a href="#">Home</a>
             </li>
-            <li class="nav-link">
+@*            <li class="nav-link">
                 <a href="/Blogs">Resources</a>
             </li>
-            <li class="nav-link">
+*@            <li class="nav-link">
                 <a href="/Projects">Projects</a>
             </li>
             <li class="nav-link">
