--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -1,5 +1,4 @@
 ﻿@import "../Global/_variables.scss";
-
 body.ibis-translating {
     visibility: hidden;
     opacity: 0;
@@ -11,17 +10,15 @@ body.ibis-translating {
     }
 
     .home-hero {
-        padding-top: 100px;
+        padding-top: 122px;
         padding-bottom: 24px;
         background: $yellow-100;
         position: relative;
-        box-sizing: border-box;
-        height: calc(100vh - 103px);
 
         .header {
             width: 100%;
             margin: 0 auto;
-            margin-bottom: 52px;
+            margin-bottom: 72px;
 
             h1 {
                 width: 80%;
@@ -61,6 +58,10 @@ body.ibis-translating {
     }
 
     .cta-box {
+        .profile-pics-wrapper.mobile {
+            display: none;
+        }
+
         p.subtitle-small {
             font-family: 'NeueHaasDisplayMedium';
             font-size: 14px;
@@ -69,11 +70,15 @@ body.ibis-translating {
         .cta-flex {
             justify-content: space-between;
         }
+
+        .cta-email {
+            display: none;
+        }
     }
 
     .learn-more {
         margin: 0 auto;
-        margin-top: 50px;
+        margin-top: 122px;
         text-align: center;
 
         a:hover {
@@ -204,6 +209,7 @@ body.ibis-translating {
                 .card-wrapper {
                     max-width: 1216px;
                     margin-bottom: 0px;
+                    padding-bottom: 15px;
                     text-align: left;
                     display: flex;
                     flex-direction: column;
@@ -212,16 +218,30 @@ body.ibis-translating {
 
                     .project-card {
                         width: 100%;
-                        max-width: 520px;
-                        height: 531px;
-                        padding: 32px;
                         margin-bottom: 0px;
-                        background: $white;
+                        padding: 32px;
                         border-radius: 24px;
+                        background: $white;
 
-                        .card-header img {
-                            cursor: pointer;
-                        }                                                              
+                        .card-content {
+                            .image-wrapper {
+                                position: relative;
+
+                                img.project-status {
+                                    position: absolute;
+                                    top: 8px;
+                                    right: 8px;
+                                }
+
+                                img.in-progress {
+                                    width: 109px;
+                                }
+
+                                img.live {
+                                    width: 67px;
+                                }
+                            }
+                        }
                     }
                 }
 
@@ -364,6 +384,56 @@ body.ibis-translating {
                     font-size: 20px;
                 }
             }
+
+            .cta-box {
+                text-align: center;
+                min-width: 200px;
+                max-height: none;
+
+                .profile-pics-wrapper.mobile {
+                    display: flex;
+                    justify-content: center;
+                    margin-bottom: 8px;
+
+                    .profile-pic {
+                        max-width: 40px;
+                        max-height: 40px;
+                        border-radius: 1000px;
+                        margin-left: -10px
+                    }
+                }
+
+                .box-header {
+                    margin-bottom: 18px;
+                }
+
+                .cta-flex {
+                    display: block;
+                    text-align: center;
+
+                    .profile-pics-wrapper.desktop {
+                        display: none;
+                    }
+
+                    input, button {
+                        width: 100%;
+                        font-family: 'NeueHaasDisplayRoman';
+                    }
+
+                    .cta-email {
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 8px;
+                        padding: 10px 24px;
+                        background: white;
+                        border: 1px solid rgba(104, 105, 110, 0.5);
+                        border-radius: 100px;
+                        color: rgba(104, 105, 110, 0.5);
+                        font-size: 16px;
+                        line-height: 100%;
+                    }
+                }
+            }
         }
 
         .mission {
@@ -449,6 +519,10 @@ body.ibis-translating {
 
                             .card-content {
                                 width: 264px;
+
+                                img.photo {
+                                    width: 100%;
+                                }
                             }
                         }
                     }
@@ -473,6 +547,14 @@ body.ibis-translating {
                 .community-card {
                     width: 100%;
 
+                    .card-header {
+                        margin-bottom: 36px;
+
+                        p {
+                            line-height: 140%;
+                        }
+                    }
+
                     &.badge {
                         .sparc-badge {
                             position: absolute;
@@ -481,10 +563,20 @@ body.ibis-translating {
                             left: 50%;
                             transform: translate(-50%,-50%);
                         }
+
+                        .card-header {
+                            margin-top: 36px;
+
+                            p {
+                                font-size :20px;
+                            }
+                        }
                     }
 
-                    .profile-pics-wrapper {
-                        justify-content: center;
+                    .cta-flex {
+                        .profile-pics-wrapper {
+                            justify-content: center;
+                        }
                     }
 
                     .community-signup {
@@ -580,21 +672,6 @@ body.ibis-translating {
                 }
             }
 
-            .cta-box {
-                text-align: center;
-                min-width: 200px;
-
-                .cta-flex {
-                    display: block;
-                    text-align: center;
-
-                    .profile-pics-wrapper {
-                        justify-content: center;
-                        margin-bottom: 18px;
-                    }
-                }
-            }
-
             .learn-more {
                 margin-top: 64px;
             }
@@ -620,6 +697,52 @@ body.ibis-translating {
 
         .values {
             padding-bottom: 64px;
+
+            .project-wrapper {
+                .left {
+                    h5.subtitle-large {
+                        margin-bottom: 44px;
+                    }
+
+                    a {
+                        font-size: 16px;
+                    }
+                }
+
+                .right {
+                    .card-wrapper {
+                        gap: 16px;
+
+                        .project-card {
+                            padding: 16px;
+
+                            .card-content {
+                                width: 236px;
+
+                                img.photo {
+                                    width: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .resources {
+            .blog-wrapper {
+                gap: 20px;
+
+                .blog-card {
+                    width: 240px;
+
+                    .blog-image {
+                        img {
+                            width: 240px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
