fix projectlist and project page css

--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -14,8 +14,8 @@
 </head>
 <body>
     <app>
-        <component type="typeof(SparcWeb.Shared.NavMenu)" render-mode="WebAssemblyPrerendered" />
-        <component type="typeof(SparcWeb.Pages.Index)" render-mode="WebAssemblyPrerendered" />
+@*        <component type="typeof(SparcWeb.Shared.NavMenu)" render-mode="WebAssemblyPrerendered" />
+*@        <component type="typeof(SparcWeb.App)" render-mode="WebAssemblyPrerendered" />
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
