--- a/SparcWeb/Shared/ProjectCard.razor
+++ b/SparcWeb/Shared/ProjectCard.razor
@@ -26,7 +26,9 @@
                 <button class="btn-small">Design</button>
                 <button class="btn-small">Productivity</button>
             </div>
-            <a href="@Github" class="card-github"><img src="images/icons/Github.svg"/></a>
+            <div class="card-github">
+                <a href="@Github"><img src="images/icons/Github.svg"/></a>
+            </div>
         </div>
     </div>
 </div>
