--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -11,13 +11,13 @@
                 <div>
                     <h2 class="title-1">Every great idea starts with a spark. Explore our journey to bring ideas to reality. </h2>
                 </div>
-@*                <div class="project-tags">
+                <div class="project-tags">
                     <button class="btn-small tag">Productivity</button>
                     <button class="btn-small tag">Ideas</button>
                     <button class="btn-small tag">Creativity</button>
                     <button class="btn-small tag">Inpirational</button>
                     <button class="btn-small tag">Motivative</button>
-                </div>*@
+                </div>
              </div>
         </div>
     </section>
