fix view all projects link on homepage

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -114,7 +114,7 @@
                         <p class="subtitle-medium">Sparc Projects</p>
                     </div>
                     <h5 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
-                    <a class="link-large" href="/projectlist">View All Projects <img src="images/icons/Icon Right.svg" /></a>
+                    <a class="link-large" href="/Projects">View All Projects <img src="images/icons/Icon Right.svg" /></a>
                 </div>
                 <div class="right">
                     <div class="card-wrapper">
